--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header 영역 - 로고, 메인메뉴
     left: 0;
     width: 100%;
     height: 80px;
-    background-color: #ff4848;
+    background-color: #bdebe7;
     z-index: 10000;
 }
 #logo {
